--- a/README.rdoc
+++ b/README.rdoc
@@ -3,6 +3,8 @@
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
+[![Build Status](https://travis-ci.org/micha-sky/hpcompute.svg?branch=master)](https://travis-ci.org/micha-sky/hpcompute)
+
 Things you may want to cover:
 
 * Ruby version
