--- a/README.rdoc
+++ b/README.rdoc
@@ -3,8 +3,7 @@
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
-[![Build Status](https://travis-ci.org/micha-sky/hpcompute.svg)](https://travis-ci.org/micha-sky/hpcompute)
-[![Build status](https://travis-ci.org/micha-sky/hpcompute.svg)](https://travis-ci.org/micha-sky/hpcompute)
+{<img src="https://travis-ci.org/micha-sky/hpcompute.svg?branch=master" alt="Build Status" />}[https://travis-ci.org/micha-sky/hpcompute]
 
 
 Things you may want to cover:
